added ability to choose languanges

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -106,13 +106,17 @@ tr:nth-child(odd) {
 	color		: white;
 	font-size	: 1.1em;
 }
-.slabelDiv, .sinputDiv{
+.slabelDiv, .sinputDiv, .twoPerPage{
 	display			: inline-block;
 	vertical-align	: top;
 }
 .slabelDiv {
 	width		: 75px;
 }
+.twoPerPage {
+	width		: 300px;
+}
+
 
 
 
