--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,7 +5,7 @@
 	color			: white;
 }
 
-.ovalButton, .ovalButtonSmall, .clearSearch, .logoutButton {
+.ovalButton, .ovalButtonSmall, .clearSearch, .logoutButton, .editButton{
 	color			: blue;
 	text-decoration	: none;
 	background-color: white;
@@ -21,7 +21,7 @@
 	top				: 30px;
 	left			: 20px;
 }
-.clearSearch {
+.clearSearch, .editButton {
 	font-size		: .8em;
 	color			: black;
 	position		: relative;
