--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,7 +5,7 @@
 	color			: white;
 }
 
-.ovalButton, .ovalButtonSmall, .clearSearch, .logoutButton, .editButton{
+.ovalButton, .ovalButtonSmall, .clearSearch, .logoutButton, .editButton, .editLyricButton{
 	color			: blue;
 	text-decoration	: none;
 	background-color: white;
@@ -21,7 +21,7 @@
 	top				: 30px;
 	left			: 20px;
 }
-.clearSearch, .editButton {
+.clearSearch, .editButton, .editLyricButton {
 	font-size		: .8em;
 	color			: black;
 	position		: relative;
@@ -29,6 +29,10 @@
 	left			: 85px;
 	margin			: 0px;
 	padding			: 1px;
+}
+.editLyricButton {
+	top				: -34px;
+	left			: 0px;
 }
 .ovalButton {
 	font-size		: 1.1em;
